# tiny-chords

./: .gitignore  CMakeLists.txt  Makefile  README.md  chordtypes.txt  indexTransformations.h  main.cpp  test.json
examples/: bluebossa.json  bluebossa.tc
include/: beattype.hpp  chord.hpp  chordtype.hpp  chunks.hpp  enums.hpp  indexTransformations.hpp  indextransformations.hpp  jsonconversions.hpp  note.hpp  section.hpp  sectionheader.hpp
npm/tiny-chords/: .gitignore  package-lock.json  package.json  tsup.config.ts
npm/tiny-chords/src/: common.ts  nowasm.ts  wasm.ts
src/: api.cpp  chord.cpp  chordtype.cpp  chunks.cpp  emscriptenapi.cpp  enums.cpp  jsonconversions.cpp  main.cpp  note.cpp  section.cpp  sectionheader.cpp
